$Id$


MIDIbox NG V1.012
~~~~~~~~~~~~~~~~~

   o The application boots a little bit faster now

   o support for more than 2 LCDs (to be documented)


MIDIbox NG V1.011
~~~~~~~~~~~~~~~~~

   o EVENT_SENDER and EVENT_RECEIVER can now also be assigned to a radio_group.
     This can not only be used in conjunction with BUTTON/LED radio groups, but also
     to distribute MIDI events to from receiver to multiple senders without
     forwarding chains (which then can be used for a different purpose)

   o the "sdcard_format" command allows to format the connected SD Card with FAT32
     from the MIOS Terminal


MIDIbox NG V1.010
~~~~~~~~~~~~~~~~~

   o SysEx: added ^cursor, ^txt and ^txt56 identifiers.
     They allow to send messages to the LCD via SysEx.
     A usage example can be found under cfg/templates/logictrl.ngc

   o Labels: ^# allows to terminate a label.
     E.g. "^label^#MyText" prints "MyText" directly after the specified ^label


MIDIbox NG V1.009
~~~~~~~~~~~~~~~~~

   o with a button assigned to 'type=Meta meta=MidiLearn range=0:1' it's now possible
     to activate a MIDI Learn mode which allows to assign an incoming MIDI event to any
     control element

   o with 'type=Meta meta=MidiLearn range=0:2' also NRPN events can be learned (in this case,
     CC#62 and CC#63 will be ignored!)

   o MIDI Learn mode can also be activated in the SCS menu


MIDIbox NG V1.008
~~~~~~~~~~~~~~~~~

   o DIN_MATRIX with rows=4 now properly supported

   o DIN_MATRIX/DOUT_MATRIX: it's now possible to invert the rows as well:
     inverted=1 or inverted_sel=1 will invert the selection lines
     inverted_row=1 will invert the row pattern

   o configuration examples for the 16x4 Button/Duo-LED matrix are now
     available under cfg/tests/blm16x4*.ngc


MIDIbox NG V1.007
~~~~~~~~~~~~~~~~~

   o changed bank concept: the BANK command has been removed, instead the EVENT
     command got a new "hw_id" and "bank" parameter.